styles/stylesmain.css
html {
  font-family: Arial, Helvetica, sans-serif;
}

main {
  padding: 0 1rem;
}

main > h2 {
  text-align: center;
}

section > h3 {
  font-weight: bold;
  text-align: center;
  color: red;
}

.email_contact {
  color: black;
}

header {
  height: 200px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}

header > h1 {
  text-wrap: wrap;
  font-weight: 100;
  font-size: 2rem;
}

#mobile_menu_button {
  width: 50px;
  height: auto;
}

.navigation {
  position: fixed;
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.801);
}

.navigation > a {
  font-size: 1.2rem;
  padding: 1rem 0;
  color: white;
  width: 100%;
  text-align: center;
}

.content_container {
  display: flex;
  flex-direction: column;
  height: 100dvh;
  justify-content: space-evenly;
  align-items: center;
}

.device_list {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
}

.services_list {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.2rem;
}

.services_list-item {
  background-color: beige;
}

.content_container > h2 {
  font-size: 1.5rem;
  font-weight: bold;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 1.2rem;
  margin-bottom: 1rem;
}

.card > img {
  display: block;
  width: 50px;
  height: auto;
  margin: auto;
}

.card > p {
  margin-top: 1rem;
}

.contact {
  justify-content: space-evenly;
}

.alert {
  animation-name: alert-grow;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

@keyframes alert-grow {
  from {
    font-size: 2rem;
  }
  to {
    font-size: 2.5rem;
  }
}

.navigation_toggle {
  display: none;
}

#header_logo {
  width: 250px;
  height: auto;
}

